# django_rest_framework

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/apps/: settings.py  urls.py
apps/drfpolls/: apps.py  serializers.py  urls.py  views.py
apps/polls/: urls.py  views.py
apps/polls/migrations/: 0001_initial.py
