[tool.poetry]
name = "django_rest_framework"
version = "0.1.0"
description = ""
authors = ["rinoguchi <inogu1979@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
mysqlclient = "^2.1.0"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
